# otus-mlflow-local

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  tasks.py
exp/: ml_config.yaml
infra/mlflow/: Dockerfile  requirements.txt
notebooks/: demo_mlflow.ipynb
src/: load_model.py  pipeline.py
